[tool.poetry]
name = "bol-kalaha"
version = "0.0.1"
description = "Implementation of the \"kalaha\" game"
authors = ["Jeroen v Hoek <jvanhoek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
